refactor: corregir malas practicas del codigo